<?xml version="1.0"?>
<package>
  <name>dockingstation</name>
  <version>0.1.0</version>
  <description>The Dockingstation package</description>

  <maintainer email="hendrik.kolvenbach@mavt.ethz.ch">Hendrik Kolvenbach</maintainer>

  <license>Proprietary</license>
  <author email="hendrik.kolvenbach@mavt.ethz.ch">Hendrik Kolvenbach</author>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>any_node</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>any_node</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


</package>
